--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "sweetalert2": "^11.4.10",
     "tslib": "2.0.3",
     "uuid": "^8.3.2",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "express": "^4.17.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "13.2.0",
