--- a/angular.json
+++ b/angular.json
@@ -27,12 +27,14 @@
                             "src/styles.scss",
                             "node_modules/datatables.net-dt/css/jquery.dataTables.css",
                             "node_modules/bootstrap/dist/css/bootstrap.min.css",
-                            "node_modules/sweetalert2/src/sweetalert2.scss"
+                            "node_modules/sweetalert2/src/sweetalert2.scss",
+                            "node_modules/datatables.net-responsive-dt/css/responsive.dataTables.css"
                         ],
                         "scripts": [
                             "node_modules/jquery/dist/jquery.js",
                             "node_modules/datatables.net/js/jquery.dataTables.js",
-                            "node_modules/bootstrap/dist/js/bootstrap.js"
+                            "node_modules/bootstrap/dist/js/bootstrap.js",
+                            "node_modules/datatables.net-responsive/js/dataTables.responsive.js"
                         ],
                         "vendorChunk": true,
                         "extractLicenses": false,
