--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "core-js": "3.8.0",
     "datatables.net": "^1.11.5",
     "datatables.net-dt": "^1.11.5",
+    "datatables.net-responsive": "^2.3.0",
+    "datatables.net-responsive-dt": "^2.3.0",
     "express": "^4.17.3",
     "file-saver": "^2.0.5",
     "firebase": "^9.9.0",
